--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-redux": "9.2.0",
-        "react-router": "7.1.5"
+        "react-router": "7.1.5",
+        "vite-plugin-svgr": "^4.3.0"
     },
     "devDependencies": {
         "@arkweid/lefthook": "0.7.7",
